# chat_csv_app

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
sample_data/: companies.csv  sales_data.csv  sales_semicolon.csv  sales_tab.csv
static/: app.js  index.html
